# emergency-location

./: .gitignore  README.md  compose.yml  main.py  pyproject.toml
app/: alembic.ini  main.py
app/alembic/: env.py
app/alembic/versions/2026/07/: 18_2159_38_356f6d2e408d_add_locationsharerequest_and_.py
app/api/: __init__.py  dependencies.py
app/api/v1/: location.py  router.py
app/core/: config.py  enums.py  exception_handler.py  exceptions.py  http.py  interfaces.py
app/db/: __init__.py  base.py  helper.py
app/gateway/: sms.py
app/infra/db/: __init__.py  helper.py
app/models/: __init__.py  location.py
app/repositories/: location.py
app/schemas/: common.py  location.py  sms.py
app/services/: phone.py  sms.py
app/usecases/: location.py
env/: .env.example  .env.template
